Melhorando a documentacao
